# gl-solar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: MatrixStack.h  Planet.h  ShaderManager.h  Space.h  TextureManager.h
shader/: orbit_fragment.glsl  orbit_vertex.glsl  planet_fragment.glsl  planet_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl
src/: MatrixStack.cpp  Planet.cpp  ShaderManager.cpp  Space.cpp  TextureManager.cpp  main.cpp
